--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ h2 {
 h3 {
   font-size: 23px;
   font-weight: bold;
-  background-image: image("resources/images/the-flatiron-building.png");
+  background-image: url("resources/images/the-flatiron-building.png");
 }
 
 p {
