--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,7 @@ body {
 
 .header {
   color: white;
-  background-image: url("resources/images/the-flatiron-building.png");
+  background-image: url("../images/the-flatiron-building.png");
   background-color: dimgray;
 }
 
@@ -27,7 +27,7 @@ h2 {
 h3 {
   font-size: 23px;
   font-weight: bold;
-  background-image: image("resources/images/the-flatiron-building.png");
+
 }
 
 p {
@@ -43,7 +43,7 @@ p {
 }
 
 #designed {
-  background-image: url("/resources/images/flatiron.jpg");
+  background-image: url("../images/the-flatiron-building.png");
   color: white;
   background-color: dimgray;
 }
